--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -21,12 +21,27 @@ archives:
       386: i386
       amd64: x86_64
 checksum:
-  name_template: 'checksums.txt'
+  name_template: "checksums.txt"
 snapshot:
   name_template: "{{ incpatch .Version }}-next"
 changelog:
   sort: asc
   filters:
     exclude:
-      - '^docs:'
-      - '^test:'
+      - "^docs:"
+      - "^test:"
+brews:
+  - name: "trufflego"
+    tap:
+      owner: mantro
+      name: trufflego
+      branch: main
+
+    commit_author:
+      name: goreleaserbot
+      email: goreleaser@carlosbecker.com
+
+    description: "Find (possible) secrets in a directory"
+    license: "MIT"
+    folder: Formula
+    homepage: "https://github.com/mantro/trufflego"
